apply SonarQube suggestions